--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ flask = "==2.2.2"
 flask-cors = "==3.0.10"
 flask-login = "*"
 flask-migrate = "==4.0.2"
-flask-sqlalchemy = "==3.0.2"
+flask-sqlalchemy = "*"
 flask-wtf = "==1.1.1"
 jinja2 = "==3.1.2"
 mako = "==1.2.4"
